# carbon

./: .gitignore  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: account.rs  account_deletion.rs  block_details.rs  instruction.rs  lib.rs  pipeline.rs  processor.rs  transaction.rs  transformers.rs
crates/core/src/clickhouse/: CLICKHOUSE_SINK_REQUIREMENTS.md  admin.rs  config.rs  data_types.md  decoder_schemas.md  http.rs  metrics.rs  mod.rs  processors.rs  requirements.md  surface_rows.rs  writer.rs
crates/core/src/clickhouse/docs/: Branch Diff to v1.md  Carbon Core v1 Architecture.md  Carbon Sink Implementation.md  ClickHouse Sink Architecture.md  ClickHouse Sink Tutorial Curriculum.md  architecture.md  data_types.md  implementation_plan.md  production-design.md  requirements.md
crates/core/src/clickhouse/rows/: mod.rs
crates/core/src/postgres/: processors.rs
crates/core/tests/: clickhouse_integration.rs
datasources/rpc-block-crawler-datasource/src/: lib.rs
datasources/rpc-gpa-datasource/src/: lib.rs
datasources/rpc-transaction-crawler-datasource/src/: lib.rs
decoders/jupiter-swap-decoder/: Cargo.toml
decoders/jupiter-swap-decoder/src/: lib.rs
decoders/jupiter-swap-decoder/src/accounts/: mod.rs
decoders/jupiter-swap-decoder/src/accounts/clickhouse/: mod.rs  token_ledger_row.rs
decoders/jupiter-swap-decoder/src/accounts/postgres/: token_ledger_row.rs
decoders/jupiter-swap-decoder/src/graphql/: query.rs
decoders/jupiter-swap-decoder/src/instructions/: close_wsol_token_account.rs  cpi_event.rs  mod.rs
decoders/jupiter-swap-decoder/src/instructions/clickhouse/: claim_row.rs  claim_token_row.rs  close_token_row.rs  close_wsol_token_account_row.rs  cpi_event_row.rs  create_token_account_row.rs  create_token_ledger_row.rs  exact_out_route_row.rs  exact_out_route_v2_row.rs  instruction_rows.rs  mod.rs  route_row.rs  route_v2_row.rs  route_with_token_ledger_row.rs  set_token_ledger_row.rs  shared_accounts_exact_out_route_row.rs  shared_accounts_exact_out_route_v2_row.rs  shared_accounts_route_row.rs  shared_accounts_route_v2_row.rs  shared_accounts_route_with_token_ledger_row.rs
decoders/jupiter-swap-decoder/src/instructions/graphql/: close_wsol_token_account_schema.rs  mod.rs
decoders/jupiter-swap-decoder/src/instructions/postgres/: claim_row.rs  claim_token_row.rs  close_token_row.rs  close_wsol_token_account_row.rs  cpi_event_row.rs  create_token_account_row.rs  create_token_ledger_row.rs  exact_out_route_row.rs  exact_out_route_v2_row.rs  mod.rs  route_row.rs  route_v2_row.rs  route_with_token_ledger_row.rs  set_token_ledger_row.rs  shared_accounts_exact_out_route_row.rs  (+4 more)
decoders/jupiter-swap-decoder/src/transactions/: mod.rs
decoders/jupiter-swap-decoder/src/types/: candidate_swap.rs  mod.rs  swap.rs
decoders/token-program-decoder/: Cargo.toml
decoders/token-program-decoder/src/accounts/: mod.rs
examples/: README.md
examples/block-crawler/src/: main.rs
examples/jupiter-swap-clickhouse/: .env.example  Cargo.toml  README.md
examples/jupiter-swap-clickhouse/src/: main.rs
examples/jupiter-swap-postgres/: .env.example  Cargo.toml  README.md
examples/jupiter-swap-postgres/src/: db.rs  main.rs  models.rs  processor.rs
examples/token-program-clickhouse/: .env.example  Cargo.toml  README.md
examples/token-program-clickhouse/src/: main.rs
metrics/prometheus-metrics/src/: lib.rs
monitoring/: README.md  compose.yaml
monitoring/grafana/dashboards/: carbon-clickhouse-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: validate-clickhouse-decoder-rollout.sh
(+9 files in other folders)
