[package]
name = "jupiter-swap-postgres"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
carbon-core = { workspace = true, features = ["postgres"] }
carbon-jupiter-swap-decoder = { workspace = true, features = ["serde", "postgres"] }
carbon-rpc-block-crawler-datasource = { workspace = true }
carbon-rpc-transaction-crawler-datasource = { workspace = true }

chrono = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
sqlx = { workspace = true }
sqlx_migrator = { workspace = true }
tokio = { workspace = true, features = ["full"] }
simplelog = "0.12"
