[package]
name = "carbon-jupiter-swap-postgres-example"
version = "0.2.1"
edition = { workspace = true }

[dependencies]
carbon-core = { workspace = true }
carbon-jupiter-swap-decoder = { workspace = true }
carbon-rpc-block-crawler-datasource = { workspace = true }
solana-transaction-status = { workspace = true }

async-trait = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
